Improve troubleshooting guide and fix some warnings.